# buildkube

./: .gitignore  Makefile  WORKSPACE  bazelrc
farm/: BUILD.bazel  Makefile  deploy.yaml  local_repository.bzl  namespace.yaml  server-structure-tests.yaml  service.yaml  worker.config  workspace.bzl
farm/k8s/: BUILD.bazel  gateway.jsonnet  serviceaccount.jsonnet  virtualservice.jsonnet
farm/server/: BUILD.bazel  debug.logging.properties  structure-tests.yaml
farm/server/k8s/: BUILD.bazel  deploy.yaml  service.yaml
farm/worker/: BUILD.bazel  structure-tests.yaml  worker.config
farm/worker/k8s/: BUILD.bazel  deploy.yaml
