load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

container_image(
    name = "image",
    base = "@rbe_ubuntu//image",
    entrypoint = ["/usr/bin/java", "-jar"],
    cmd = [
        # "--jvm_flag=-Djava.util.logging.config.file=/debug.logging.properties",
        "/buildfarm-worker_deploy.jar",
        "/worker.config",
    ],
    files = [
        "worker.config",
        "debug.logging.properties",
        "@build_buildfarm//:worker",
    ],
    visibility = ["//farm/worker:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "structure-tests.yaml",
    ],
    size = "small",
)
