load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "deploy",
    images = {
        "eu.gcr.io/national-archives/buildkube/farm/worker:latest": "//farm/worker:image",
    },
    template = "deploy.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":deploy",
    ],
)
